[package]
name = "iDownloader"
version = "0.1.1"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }  # 必须启用完整特性
reqwest = "0.12.15"
futures = "0.3"
percent-encoding = "2.3.1"                        # 实际版本号根据最新版调整
tempfile = "3.3.0"
indicatif = "0.17.11"
clap = { version = "4.0", features = ["derive"] }
dirs = "6.0.0"
